Add Latest Video Section

--- a/src/components/MainPost.astro
+++ b/src/components/MainPost.astro
@@ -6,30 +6,31 @@ const { post } = Astro.props as {
 };
 ---
 
-<article class="card border border-accent/10">
+<article
+  class="card bg-base-200 w-full h-full group overflow-hidden rounded-2xl shadow-xl hover:shadow-2xl transition-all duration-500"
+>
   <figure class="w-full h-full">
     <img
       src={post.featuredImage?.url}
       alt={post.title}
-      class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110 hover:brightness-95"
+      class="w-full h-full object-cover object-top transition-transform duration-700 group-hover:scale-105"
     />
   </figure>
-  <div class="card-body justify-end items-center p-6 md:p-12 text-center">
-    <div class="max-w-4xl mx-auto">
-      <h2
-        class="card-title text-center text-3xl md:text-6xl font-extrabold text-white mb-6 tracking-tight leading-tight justify-center"
+  <div class="card-body p-4 md:p-10 space-y-2">
+    <h2
+      class="card-title text-3xl md:text-5xl font-extrabold tracking-tight leading-none text-balance drop-shadow-sm"
+    >
+      <a
+        href={`/articulos/${post.slug}`}
+        class="hover:text-primary transition-colors duration-300"
       >
-        <a
-          href={`/articulos/${post.slug}`}
-          class="hover:text-primary transition-colors"
-        >
-          {post.title}
-        </a>
-      </h2>
-      <div
-        class="text-gray-200 text-sm md:text-xl line-clamp-2 md:line-clamp-3 font-medium opacity-90 mx-auto"
-        set:html={post.excerptHtml}
-      />
-    </div>
+        {post.title}
+      </a>
+    </h2>
+
+    <div
+      class="line-clamp-4 text-neutral-content"
+      set:html={post.excerptHtml}
+    />
   </div>
 </article>
