--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -26,7 +26,7 @@
 		<div class="navbar-center">
 			<a
 				href="/"
-				class="btn btn-ghost text-2xl font-black font-montserrat"
+				class="btn btn-ghost text-2xl lg:text-5xl font-black font-montserrat"
 			>
 				Vox Populi
 			</a>
