--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -15,7 +15,7 @@ import "../styles/global.css";
       <input id="main-drawer" type="checkbox" class="drawer-toggle" />
       <div class="drawer-content flex flex-col">
         <NavBar />
-        <main class="container mx-auto px-4 py-8">
+        <main class="">
           <slot />
         </main>
       </div>
