--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
 import Featured from "../components/Featured.astro";
+import LatestVideos from "../components/LatestVideos.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
 <BaseLayout>
   <Featured />
+  <LatestVideos />
 </BaseLayout>
