--- a/src/components/Featured.astro
+++ b/src/components/Featured.astro
@@ -1,23 +1,21 @@
 ---
 import MainPost from "./MainPost.astro";
 import SecondaryPost from "./SecondaryPost.astro";
-import { get5Destacadas } from "../lib/wp";
+import { getLatestPostsFromCategoryId } from "../lib/wp";
 
-const posts = await get5Destacadas();
+const posts = await getLatestPostsFromCategoryId(14, 3);
 const featured = posts[0];
-const otherFeatured = posts.slice(1, 5);
+const otherFeatured = posts.slice(1, 3);
 ---
 
-<section class="">
-    <div class="grid grid-cols-1 lg:grid-cols-4 gap-6">
-        <!-- Big Featured Post -->
-        <div class="lg:col-span-3">
-            {featured && <MainPost post={featured} />}
-        </div>
+<section
+    class="grid grid-cols-1 lg:grid-cols-4 gap-6 container mx-auto py-8 px-4"
+>
+    <div class="lg:col-span-3">
+        {featured && <MainPost post={featured} />}
+    </div>
 
-        <!-- Smaller Featured Posts -->
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-1 gap-6">
-            {otherFeatured.map((post) => <SecondaryPost post={post} />)}
-        </div>
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-1 gap-6">
+        {otherFeatured.map((post) => <SecondaryPost post={post} />)}
     </div>
 </section>
