--- a/src/components/SecondaryPost.astro
+++ b/src/components/SecondaryPost.astro
@@ -7,31 +7,24 @@ const { post } = Astro.props as {
 ---
 
 <article
-    class="card image-full w-full aspect-video overflow-hidden rounded-xl group cursor-pointer shadow-lg hover:shadow-2xl transition-shadow duration-300"
+    class="card card-side overflow-hidden rounded-xl group cursor-pointer shadow-lg hover:shadow-2xl transition-all duration-500 hover:-translate-y-1"
 >
-    <figure class="w-full h-full">
+    <figure class="w-1/3 overflow-hidden">
         <img
             src={post.featuredImage?.url}
             alt={post.title}
-            class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110 hover:brightness-95"
+            class="w-full h-full object-cover object-top transition-transform duration-700 ease-out group-hover:scale-105"
         />
     </figure>
-    <div
-        class="card-body justify-end items-center text-center p-4 md:p-6 bg-linear-to-t from-black/80 via-black/20 to-transparent"
-    >
-        <div class="w-full">
+    <div class="card-body p-0 w-2/3 bg-base-200">
+        <div class="p-3 space-y-4">
             <h2
-                class="card-title text-center text-lg md:text-xl font-bold text-white mb-2 line-clamp-2 leading-tight justify-center"
+                class="card-title text-xl md:text-xl font-extrabold tracking-tight leading-none text-balance drop-shadow-sm"
             >
-                <a
-                    href={`/articulos/${post.slug}`}
-                    class="hover:text-primary transition-colors"
-                >
-                    {post.title}
-                </a>
+                <a href={`/articulos/${post.slug}`}>{post.title}</a>
             </h2>
             <div
-                class="text-gray-200 text-xs md:text-sm line-clamp-2 font-medium opacity-80"
+                class="text-gray-200 text-xs md:text-sm line-clamp-3 font-medium opacity-100 md:opacity-0 md:group-hover:opacity-90 transition-all duration-500 delay-75 transform translate-y-0 md:translate-y-2 md:group-hover:translate-y-0"
                 set:html={post.excerptHtml}
             />
         </div>
