--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,12 @@
 ---
 import Featured from "../components/Featured.astro";
+import LatestPosts from "../components/LatestPosts.astro";
 import LatestVideos from "../components/LatestVideos.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
 <BaseLayout>
-  <Featured />
-  <LatestVideos />
+  <Featured/>
+  <LatestVideos/>
+  <LatestPosts/>
 </BaseLayout>
