--- a/src/components/Featured.astro
+++ b/src/components/Featured.astro
@@ -1,21 +1,22 @@
 ---
+import { getLatestPostsFromCategoryId } from "../lib/wp";
 import MainPost from "./MainPost.astro";
 import SecondaryPost from "./SecondaryPost.astro";
-import { getLatestPostsFromCategoryId } from "../lib/wp";
 
 const posts = await getLatestPostsFromCategoryId(14, 3);
 const featured = posts[0];
 const otherFeatured = posts.slice(1, 3);
 ---
 
-<section
-    class="grid grid-cols-1 lg:grid-cols-4 gap-6 container mx-auto py-8 px-4"
->
-    <div class="lg:col-span-3">
-        {featured && <MainPost post={featured} />}
-    </div>
+<section class="grid grid-cols-1 lg:grid-cols-4  container mx-auto">
+  <div>
+    <h2 class="text-2xl font-bold px-4">Destacadas</h2>
+  </div>
+  <div class="p-4 space-y-8">
+    <div class="lg:col-span-3">{featured && <MainPost post={featured} />}</div>
 
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-1 gap-6">
-        {otherFeatured.map((post) => <SecondaryPost post={post} />)}
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-1 space-y-8">
+      {otherFeatured.map((post) => <SecondaryPost post={post} />)}
     </div>
+  </div>
 </section>
