--- a/src/components/MainPost.astro
+++ b/src/components/MainPost.astro
@@ -7,14 +7,14 @@ const { post } = Astro.props as {
 ---
 
 <article
-  class="card bg-base-200 w-full h-full group overflow-hidden rounded-2xl shadow-xl hover:shadow-2xl transition-all duration-500"
+  class="card bg-base-300 w-full h-full group overflow-hidden rounded-2xl shadow-xl hover:shadow-2xl transition-all duration-500"
 >
   <figure class="w-full h-full">
     <img
       src={post.featuredImage?.url}
       alt={post.title}
       class="w-full h-full object-cover object-top transition-transform duration-700 group-hover:scale-105"
-    />
+    >
   </figure>
   <div class="card-body p-4 md:p-10 space-y-2">
     <h2
@@ -28,9 +28,6 @@ const { post } = Astro.props as {
       </a>
     </h2>
 
-    <div
-      class="line-clamp-4 text-neutral-content"
-      set:html={post.excerptHtml}
-    />
+    <div class="line-clamp-4 text-neutral-content" set:html={post.excerptHtml}/>
   </div>
 </article>
