--- a/src/pages/articulos/[...slug].astro
+++ b/src/pages/articulos/[...slug].astro
@@ -3,30 +3,30 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
 import { getAllPosts } from "../../lib/wp";
 
 export async function getStaticPaths() {
-    const posts = await getAllPosts();
-    return posts.map((post) => ({
-        params: { slug: post.slug },
-        props: { post },
-    }));
+  const posts = await getAllPosts();
+  return posts.map((post) => ({
+    params: { slug: post.slug },
+    props: { post },
+  }));
 }
 
 const { post } = Astro.props;
 ---
 
 <BaseLayout title={post?.title} description={post?.excerptHtml}>
-    {
+  {
         post && (
-            <>
-                <header class="text-center max-w-4xl mx-auto px-2">
+            <section class="p-2">
+                <header class="text-center text-pretty">
                     <h1 class="text-4xl md:text-6xl font-extrabold mb-6 text-white tracking-tight">
                         {post.title}
                     </h1>
                 </header>
                 <article
-                    class="prose prose-lg lg:prose-xl mx-auto prose-invert"
+                    class="prose prose-xl rounded-2xl bg-base-300 overflow-hidden"
                     set:html={post.contentHtml}
                 />
-            </>
+            </section>
         )
     }
 </BaseLayout>
