--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
 @import "tailwindcss";
 @plugin "@tailwindcss/typography";
 @plugin "daisyui";
 
 @theme {
-  --font-montserrat: "Montserrat", sans-serif; 
+  --font-montserrat: "Montserrat", sans-serif;
 }
 
 .wp-block-image {
@@ -13,16 +13,14 @@
     width: 100%;
     height: auto;
     object-fit: cover;
-  } 
+  }
 }
 
 .wp-element-caption {
   font-size: 1rem;
-  font-style: italic;  
+  font-style: italic;
   text-align: center;
 }
-  
-
 
 /* Responsive Embeds */
 .prose {
@@ -33,6 +31,13 @@
     max-width: 100%;
     aspect-ratio: 16 / 9;
     height: auto !important;
+  }
+  h2, h3, h4 {
+    @apply px-4
+  }
+
+  p {
+    @apply px-6
   }
 }
 
